Implement GitHub OAuth authentication; remove email/password login features and update documentation

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# GitHub OAuth Configuration
+# Configure GitHub OAuth in Supabase Dashboard > Authentication > Providers > GitHub
+# Add your GitHub OAuth App credentials in Supabase
+# Add callback URL: http://localhost:3000/auth/callback (for development)
+# Add callback URL: https://yourdomain.com/auth/callback (for production)
